--- a/index.html
+++ b/index.html
@@ -5,5 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>goit-jw-hw-02</title>
   </head>
-  <body></body>
+  <body>
+    <script src="./js/task-1.js" defer type="module"></script>
+    <script src="./js/task-2.js" defer type="module"></script>
+    <script src="./js/task-3.js" defer type="module"></script>
+    <script src="./js/task-4.js" defer type="module"></script>
+  </body>
 </html>
